# ITPProjetoFinal

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  progresso.md  tabby.txt  tabela_funcionario.txt  tabela_novinha.txt  tabela_praia.txt  tabela_ross.txt  tabela_tab.txt  tabelas.txt
funcs/: apagaLinha.c  apagaTabela.c  criaLinha.c  criaTabela.c  listaDadosTabela.c  listaTabelas.c  pesquisaValor.c
heading/: definitions.h  functions.h  utils.h
tabelasIndividuais/: tab0.txt  tab1.txt  tab_pessoa.txt  tabelaNova.txt  tabela_alunos.txt  tabela_funcionario.txt  tabela_loja.txt  tabela_pessoa.txt  tabela_prof.txt  tabela_professores.txt  teste1.txt
utils/: auxPesquisaChar.c  auxPesquisaNum.c  contaLinhas.c  criaTabelaArquivo.c  main.c  mostraMenu.c  pagaStrlen.c  pegaColunas.c  validaChavePrimaria.c  validaStringTipo.c  validaTabela.c
